<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="api_key_googleplus" translatable="false">AIzaSyDxY-Yz9GbGLM0tai7W1N6x3RDHxM2r1GY</string>

    <string name="app_name">GuaguasLPGC</string>

    <!-- Menú drawer -->
    <string name="routes">Líneas</string>
    <string name="favorites">Favoritas</string>
    <string name="stops">Paradas</string>
    <string name="map">Mapa</string>
    <!-- Menú secundario -->
    <string name="contact_with_us">Contacta con nosotros</string>
    <string name="settings">Ajustes</string>
    <string name="menu">Menú</string>

    <!-- Pantalla de ajustes -->
    <string name="theme">Tema</string>
    <string name="theme_summary">Escoge el color para usar como tema</string>
    <string name="indigo">Indigo</string>
    <string name="pink">Rosa</string>
    <string name="purple">Violeta</string>
    <string name="red">Rojo</string>
    <string name="blue">Azul</string>
    <string name="green">Verde</string>
    <string name="orange">Naranja</string>
    <string name="yellow">Amarillo</string>
    <string name="gray">Gris</string>

    <!-- Notificaciones -->
    <string name="preferences_notification_title">Notificaciones</string>
    <string name="preferences_notification_message">Activar las notificaciones.</string>
    <string name="preferences_notification_sound_title">Sonido</string>
    <string name="preferences_notification_sound_message">Notificaciones con sonido.</string>
    <string name="preferences_notification_vibrate_title">Vibración</string>
    <string name="preferences_notification_vibrate_message">Notificaciones con vibración.</string>
    <string name="dialog_title_check_stop_by_code">Consultar parada</string>
    <string name="dialog_message_check_stop_by_code">Introduce el código de la parada para consultar las guaguas.</string>
    <string name="dialog_hint_message_check_stop_by_code">Código de la parada</string>
    <string name="dialog_positive_check_stop_by_code">Consultar</string>
    <string name="dialog_negative_check_stop_by_code">Cancelar</string>
    <string name="destination">Destino</string>
    <string name="empty_stops">Parece que no van a pasar guaguas. Quizás sea tarde.</string>
    <string name="preferences_notification_priority_message">Selecciona la prioridad de las notificaciones.</string>
    <string name="preferences_notification_priority">Prioridad</string>
    <string name="preferences_general_language_title">Idioma</string>
    <string name="tell_me_when">Avísame de la guagua</string>
    <string name="dialog_guagua_alert_description">Escoge los minutos de antelación con los que te avisamos.</string>
    <string name="cancel">Cancelar</string>
    <string name="open_this_route">Ir a esta línea</string>
    <string name="highlight_arrive">Destacar</string>
    <string name="delete_stop_from_favorite">¿Está seguro de que desea eliminar la parada de favoritos?</string>
    <string name="save">Guardar</string>
    <string name="preferences_personalization_title">Personalización</string>
    <string name="preferences_personalization_schedule_text_size">Tamaño de letra de horarios</string>
    <string name="preferences_personalization_schedule_text_size_summary">Selecciona el tamaño de la letra de los horarios de las líneas para una visualización adaptada a ti.</string>
    <string name="schedules">Horarios</string>
    <string name="stop_deleted">Parada eliminada de favoritos</string>

    <string name="stop_alert_notification_title">Aviso de guagua</string>
    <string name="stop_alert_notification">La línea %1$s pasará en %2$d minutos por %3$s</string>

</resources>
