<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_routes"
            android:checked="true"
            android:icon="@drawable/ic_directions_bus"
            android:title="@string/routes"/>

        <item
            android:id="@+id/drawer_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites"/>

        <item
            android:id="@+id/drawer_stops"
            android:icon="@drawable/ic_nature_people"
            android:title="@string/stops"/>

    </group>

    <group
        android:id="@+id/second_drawer"
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_contact"
            android:checked="true"
            android:icon="@drawable/ic_email"
            android:title="@string/contact_with_us"/>

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>



    </group>

</menu>